--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sevenorcas.johnnyapp.GraphActivity" >
+    tools:context="com.sevenorcas.field.graph.GraphActivity" >
 
     <!-- we add graph view to display -->
     <com.jjoe64.graphview.GraphView
