--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -19,44 +19,140 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp" />
 
-    <EditText
-        android:id="@+id/maxYTxt"
+
+    <TextView
+        android:id="@+id/descrTxt"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="270dp"
+        android:width="120dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Description" />
+
+    <EditText
+        android:id="@+id/descrTxtV"
+        android:layout_width="184dp"
+        android:layout_height="34dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="266dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Description"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/frequencyTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/descrTxt"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:width="120dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Frequency" />
+
+    <TextView
+        android:id="@+id/frequencyTxtV"
+        android:layout_width="101dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/descrTxtV"
+        android:layout_marginTop="-1dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="140dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="freq" />
+
+    <TextView
+        android:id="@+id/durationTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/frequencyTxt"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:width="120dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Duration" />
+
+    <TextView
+        android:id="@+id/durationTxtV"
+        android:layout_width="101dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/frequencyTxtV"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="140dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="duration" />
+
+    <TextView
+        android:id="@+id/minYTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/durationTxt"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
+        android:width="120dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Min Y" />
+
+    <TextView
+        android:id="@+id/minYTxtV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/durationTxtV"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="10dp"
+        android:width="120dp"
+        android:ems="10"
+        android:enabled="true"
+        android:inputType="text"
+        android:text="min" />
+
+
+    <TextView
+        android:id="@+id/maxYTxt"
+        android:layout_width="101dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/minYTxt"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
-        android:editable="false"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Max Y" />
 
-    <EditText
-        android:id="@+id/minYTxtV"
-        android:layout_width="101dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="270dp"
-        android:layout_toEndOf="@+id/minYTxt"
-        android:editable="false"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="min" />
-
-    <EditText
+    <TextView
         android:id="@+id/maxYTxtV"
         android:layout_width="101dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/minYTxtV"
-        android:layout_marginStart="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="10dp"
-        android:layout_toEndOf="@+id/minYTxt"
-        android:editable="false"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="max" />
+
+
+
+
+
+
 
     <Button
         android:id="@+id/saveBtn"
@@ -65,26 +161,12 @@
         android:layout_below="@+id/maxYTxt"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="124dp"
+        android:layout_marginStart="110dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="125dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="110dp"
         android:text="Save" />
 
-    <EditText
-        android:id="@+id/minYTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="270dp"
-        android:editable="false"
-        android:ems="10"
-        android:enabled="true"
-        android:inputType="text"
-        android:text="Min Y"
-        tools:editable="false" />
 
 
 </RelativeLayout>
