--- a/app/src/main/res/layout/activity_listdetail.xml
+++ b/app/src/main/res/layout/activity_listdetail.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/listDetailView"
     >
 
     <TextView
         android:id="@+id/descrTV"
-        android:layout_width="wrap_content"
+        android:layout_width="159dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -24,15 +24,5 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="79dp"
         android:text="created" />
-
-    <Button
-        android:id="@+id/deleteBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="308dp"
-        android:layout_marginTop="58dp"
-        android:text="Delete" />
 
 </RelativeLayout>
