--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -27,7 +27,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="280dp"
         android:width="120dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -35,15 +35,18 @@
 
     <EditText
         android:id="@+id/descrTxtV"
-        android:layout_width="184dp"
-        android:layout_height="34dp"
-        android:layout_alignParentTop="true"
+        android:layout_width="241dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="266dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="138dp"
+        android:layout_marginTop="270dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Description"
+        android:enabled="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:hint="@string/descr"
+        android:inputType="text"
         android:textSize="14sp" />
 
     <TextView
@@ -163,7 +166,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="110dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="110dp"
         android:text="Save" />
 
